[package]
name = "agent-rs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = { version = "2", features = ["serde"] }
lru = "0.7.5"
futures = "0.3"
crossbeam = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
clap = { version = "3.2.5", features = ["derive"] }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"